--- a/백준/스택/10773제로.md
+++ b/백준/스택/10773제로.md
@@ -1,4 +1,4 @@
-[백준 10773번 제로 NodeJS](https://www.acmicpc.net/problem/10773)
+[node.js 백준 10773번 제로 NodeJS](https://www.acmicpc.net/problem/10773)
 
 ---
 
