--- a/백준/스택/10828스택.md
+++ b/백준/스택/10828스택.md
@@ -1,4 +1,4 @@
-[백준 10828번 스택 NodeJS/ 시간초과](https://www.acmicpc.net/problem/10828)
+[node.js 백준 10828번 스택 NodeJS/ 시간초과](https://www.acmicpc.net/problem/10828)
 
 ---
 
