--- a/백준/스택/9012괄호.md
+++ b/백준/스택/9012괄호.md
@@ -1,4 +1,4 @@
-[백준 9012번 괄호 NodeJS](https://www.acmicpc.net/problem/9012)
+[node.js 백준 9012번 괄호 NodeJS](https://www.acmicpc.net/problem/9012)
 
 ---
 
