--- a/백준/백트래킹/15649N과M(1).md
+++ b/백준/백트래킹/15649N과M(1).md
@@ -1,4 +1,4 @@
-[백준 15649번 N과 M(1)](https://www.acmicpc.net/problem/15649)
+[node.js 백준 15649번 N과 M(1)](https://www.acmicpc.net/problem/15649)
 
 ---
 
