--- a/백준/백트래킹/15651N과M(3).md
+++ b/백준/백트래킹/15651N과M(3).md
@@ -1,4 +1,4 @@
-[백준 15650번 N과 M(3)](https://www.acmicpc.net/problem/15651)
+[node.js 백준 15650번 N과 M(3)](https://www.acmicpc.net/problem/15651)
 
 ---
 
