--- a/백준/브루트포스/1018체스판다시칠하기.md
+++ b/백준/브루트포스/1018체스판다시칠하기.md
@@ -1,4 +1,4 @@
-[백준 1018번 체스판 다시칠하기](https://www.acmicpc.net/problem/1018)
+[node.js 백준 1018번 체스판 다시칠하기](https://www.acmicpc.net/problem/1018)
 
 ---
 
