--- a/백준/수학/1712손익분기점.md
+++ b/백준/수학/1712손익분기점.md
@@ -1,4 +1,4 @@
-[백준 1712번 손익분기점](https://www.acmicpc.net/problem/1712)
+[node.js 백준 1712번 손익분기점](https://www.acmicpc.net/problem/1712)
 
 ```javascript
 const readline = require("readline");
